--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-18T23:56:57.973725Z",
-     "start_time": "2019-03-18T23:56:57.970756Z"
+     "end_time": "2019-03-18T23:58:53.079495Z",
+     "start_time": "2019-03-18T23:58:53.073529Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__doc__', '__loader__', '__name__', '__package__', '__path__', '__spec__']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import sys\n",
-    "import lib\n"
+    "from lib import *\n",
+    "dir(lib)"
    ]
   },
   {
@@ -92,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-18T23:55:01.529969Z",
-     "start_time": "2019-03-18T23:55:01.278072Z"
+     "end_time": "2019-03-18T23:57:45.980596Z",
+     "start_time": "2019-03-18T23:57:45.717769Z"
     }
    },
    "outputs": [],
