Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -2,30 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-18T23:58:53.079495Z",
-     "start_time": "2019-03-18T23:58:53.073529Z"
+     "end_time": "2019-03-19T00:00:01.705638Z",
+     "start_time": "2019-03-19T00:00:01.697116Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['__doc__', '__loader__', '__name__', '__package__', '__path__', '__spec__']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lib.envs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-35-593acf8e8763>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menvs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lib.envs'"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import sys\n",
-    "from lib import *\n",
-    "dir(lib)"
+    "import .lib.envs"
    ]
   },
   {
@@ -104,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-18T23:57:45.980596Z",
-     "start_time": "2019-03-18T23:57:45.717769Z"
+     "end_time": "2019-03-19T00:00:44.273386Z",
+     "start_time": "2019-03-19T00:00:44.026494Z"
     }
    },
    "outputs": [],
