--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -68,9 +68,11 @@
     "        # for every state value\n",
     "        for i in range(len(V)):\n",
     "            current_state = V[i]\n",
+    "            V[i] =\n",
     "            \n",
-    "        # TODO: Implement!\n",
-    "        break\n",
+    "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
+    "            \n",
+    "        if delta_value< \n",
     "    return np.array(V)"
    ]
   },
