Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -69,6 +69,7 @@
     "        for i in range(len(V)):\n",
     "            current_state = V[i]\n",
     "            \n",
+    "            print(env.P[i])\n",
     "            # for every action\n",
     "#             V[i] =\n",
     "#             delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
