Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:06:24.283647Z",
-     "start_time": "2019-03-19T00:06:24.278697Z"
+     "end_time": "2019-03-19T00:13:23.308911Z",
+     "start_time": "2019-03-19T00:13:23.302928Z"
     }
    },
    "outputs": [],
@@ -69,7 +69,13 @@
     "        for i in range(len(V)):\n",
     "            current_state = V[i]\n",
     "            \n",
-    "            print(env.P[i])\n",
+    "            for action_index in range(4):\n",
+    "                prob, next_state, reward, done = env.P[i][action_index]\n",
+    "                if not done:\n",
+    "                    current_state = current_state + \n",
+    "            \n",
+    "            print(env.P[5][2])\n",
+    "            break\n",
     "            # for every action\n",
     "#             V[i] =\n",
     "#             delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
@@ -80,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:06:24.559813Z",
-     "start_time": "2019-03-19T00:06:24.553832Z"
+     "end_time": "2019-03-19T00:13:23.658976Z",
+     "start_time": "2019-03-19T00:13:23.652004Z"
     }
    },
    "outputs": [
@@ -92,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n",
+      "[(1.0, 9, -1.0, False)]\n",
       "[[0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]\n",
