Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -72,7 +72,7 @@
     "            for action_index in range(4):\n",
     "                prob, next_state, reward, done = env.P[i][action_index]\n",
     "                if not done:\n",
-    "                    current_state = current_state + \n",
+    "                    current_state = current_state + policy[i,action_index] * prob * (reward + ) \n",
     "            \n",
     "            print(env.P[5][2])\n",
     "            break\n",
