Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:13:23.308911Z",
-     "start_time": "2019-03-19T00:13:23.302928Z"
+     "end_time": "2019-03-19T00:16:09.655972Z",
+     "start_time": "2019-03-19T00:16:09.647984Z"
     }
    },
    "outputs": [],
@@ -70,15 +70,11 @@
     "            current_state = V[i]\n",
     "            \n",
     "            for action_index in range(4):\n",
-    "                prob, next_state, reward, done = env.P[i][action_index]\n",
+    "                prob, next_state, reward, done = env.P[i][action_index][0]\n",
     "                if not done:\n",
-    "                    current_state = current_state + policy[i,action_index] * prob * (reward + ) \n",
-    "            \n",
-    "            print(env.P[5][2])\n",
-    "            break\n",
-    "            # for every action\n",
-    "#             V[i] =\n",
-    "#             delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
+    "                    current_state = current_state + policy[i,action_index] * prob * (reward + V[next_state]) \n",
+    "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
+    "            V[i] = current_state\n",
     "            \n",
     "        if delta_value<theta: break\n",
     "    return np.array(V)"
@@ -86,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:13:23.658976Z",
-     "start_time": "2019-03-19T00:13:23.652004Z"
+     "end_time": "2019-03-19T00:16:10.037141Z",
+     "start_time": "2019-03-19T00:16:09.945419Z"
     }
    },
    "outputs": [
@@ -98,7 +94,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1.0, 9, -1.0, False)]\n",
       "[[0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]\n",
@@ -115,7 +110,16 @@
       " [0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]]\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+      "[  0. -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf\n",
+      " -inf   0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:31: RuntimeWarning: overflow encountered in double_scalars\n",
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:32: RuntimeWarning: invalid value encountered in double_scalars\n"
      ]
     }
    ],
