--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -65,6 +65,7 @@
     "    while True:\n",
     "        # this is the change value\n",
     "        delta_value = 0\n",
+    "        \n",
     "        # for every state value\n",
     "        for i in range(len(V)):\n",
     "            current_state = V[i]\n",
@@ -72,7 +73,7 @@
     "            for action_index in range(4):\n",
     "                prob, next_state, reward, done = env.P[i][action_index][0]\n",
     "                if not done:\n",
-    "                    current_state = current_state + policy[i,action_index] * prob * (reward + V[next_state]) \n",
+    "                    current_state = current_state + policy[i,action_index] * prob * (reward + discount_factor * V[next_state]) \n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
     "            V[i] = current_state\n",
     "            \n",
