Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:16:09.655972Z",
-     "start_time": "2019-03-19T00:16:09.647984Z"
+     "end_time": "2019-03-19T00:18:06.912808Z",
+     "start_time": "2019-03-19T00:18:06.905791Z"
     }
    },
    "outputs": [],
@@ -72,8 +72,7 @@
     "            \n",
     "            for action_index in range(4):\n",
     "                prob, next_state, reward, done = env.P[i][action_index][0]\n",
-    "                if not done:\n",
-    "                    current_state = current_state + policy[i,action_index] * prob * (reward + discount_factor * V[next_state]) \n",
+    "                V[i] = V[i] + policy[i,action_index] * prob * (reward + discount_factor * V[next_state]) \n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
     "            V[i] = current_state\n",
     "            \n",
@@ -83,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:16:10.037141Z",
-     "start_time": "2019-03-19T00:16:09.945419Z"
+     "end_time": "2019-03-19T00:18:15.118980Z",
+     "start_time": "2019-03-19T00:18:15.023586Z"
     }
    },
    "outputs": [
@@ -111,8 +110,10 @@
       " [0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]\n",
       " [0.25 0.25 0.25 0.25]]\n",
-      "[  0. -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf\n",
-      " -inf   0.]\n"
+      "[[  0. -inf -inf -inf]\n",
+      " [-inf -inf -inf -inf]\n",
+      " [-inf -inf -inf -inf]\n",
+      " [-inf -inf -inf   0.]]\n"
      ]
     },
     {
@@ -129,7 +130,7 @@
     "v = policy_eval(random_policy, env)\n",
     "\n",
     "print(random_policy)\n",
-    "print(v)"
+    "print(v.reshape((4,4)))"
    ]
   },
   {
