--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:19:26.966906Z",
-     "start_time": "2019-03-19T00:19:26.958918Z"
+     "end_time": "2019-03-19T00:21:31.406870Z",
+     "start_time": "2019-03-19T00:21:31.400709Z"
     }
    },
    "outputs": [],
@@ -70,6 +70,9 @@
     "        for i in range(len(V)):\n",
     "            current_state = V[i]\n",
     "            \n",
+    "            for prob,next_state,reward,done in env.P[i]:\n",
+    "                print(prob, next_state, reward, done)\n",
+    "                \n",
     "            for action_index in range(4):\n",
     "                prob, next_state, reward, done = env.P[i][action_index][0]\n",
     "                V[i] = V[i] + policy[i,action_index] * prob * (reward + discount_factor * V[next_state]) \n",
@@ -83,165 +86,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:20:09.739077Z",
-     "start_time": "2019-03-19T00:20:09.728106Z"
+     "end_time": "2019-03-19T00:22:10.666950Z",
+     "start_time": "2019-03-19T00:22:10.661384Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: {0: [(1.0, 0, 0.0, True)],\n",
-       "  1: [(1.0, 0, 0.0, True)],\n",
-       "  2: [(1.0, 0, 0.0, True)],\n",
-       "  3: [(1.0, 0, 0.0, True)]},\n",
-       " 1: {0: [(1.0, 1, -1.0, False)],\n",
-       "  1: [(1.0, 2, -1.0, False)],\n",
-       "  2: [(1.0, 5, -1.0, False)],\n",
-       "  3: [(1.0, 0, -1.0, True)]},\n",
-       " 2: {0: [(1.0, 2, -1.0, False)],\n",
-       "  1: [(1.0, 3, -1.0, False)],\n",
-       "  2: [(1.0, 6, -1.0, False)],\n",
-       "  3: [(1.0, 1, -1.0, False)]},\n",
-       " 3: {0: [(1.0, 3, -1.0, False)],\n",
-       "  1: [(1.0, 3, -1.0, False)],\n",
-       "  2: [(1.0, 7, -1.0, False)],\n",
-       "  3: [(1.0, 2, -1.0, False)]},\n",
-       " 4: {0: [(1.0, 0, -1.0, True)],\n",
-       "  1: [(1.0, 5, -1.0, False)],\n",
-       "  2: [(1.0, 8, -1.0, False)],\n",
-       "  3: [(1.0, 4, -1.0, False)]},\n",
-       " 5: {0: [(1.0, 1, -1.0, False)],\n",
-       "  1: [(1.0, 6, -1.0, False)],\n",
-       "  2: [(1.0, 9, -1.0, False)],\n",
-       "  3: [(1.0, 4, -1.0, False)]},\n",
-       " 6: {0: [(1.0, 2, -1.0, False)],\n",
-       "  1: [(1.0, 7, -1.0, False)],\n",
-       "  2: [(1.0, 10, -1.0, False)],\n",
-       "  3: [(1.0, 5, -1.0, False)]},\n",
-       " 7: {0: [(1.0, 3, -1.0, False)],\n",
-       "  1: [(1.0, 7, -1.0, False)],\n",
-       "  2: [(1.0, 11, -1.0, False)],\n",
-       "  3: [(1.0, 6, -1.0, False)]},\n",
-       " 8: {0: [(1.0, 4, -1.0, False)],\n",
-       "  1: [(1.0, 9, -1.0, False)],\n",
-       "  2: [(1.0, 12, -1.0, False)],\n",
-       "  3: [(1.0, 8, -1.0, False)]},\n",
-       " 9: {0: [(1.0, 5, -1.0, False)],\n",
-       "  1: [(1.0, 10, -1.0, False)],\n",
-       "  2: [(1.0, 13, -1.0, False)],\n",
-       "  3: [(1.0, 8, -1.0, False)]},\n",
-       " 10: {0: [(1.0, 6, -1.0, False)],\n",
-       "  1: [(1.0, 11, -1.0, False)],\n",
-       "  2: [(1.0, 14, -1.0, False)],\n",
-       "  3: [(1.0, 9, -1.0, False)]},\n",
-       " 11: {0: [(1.0, 7, -1.0, False)],\n",
-       "  1: [(1.0, 11, -1.0, False)],\n",
-       "  2: [(1.0, 15, -1.0, True)],\n",
-       "  3: [(1.0, 10, -1.0, False)]},\n",
-       " 12: {0: [(1.0, 8, -1.0, False)],\n",
-       "  1: [(1.0, 13, -1.0, False)],\n",
-       "  2: [(1.0, 12, -1.0, False)],\n",
-       "  3: [(1.0, 12, -1.0, False)]},\n",
-       " 13: {0: [(1.0, 9, -1.0, False)],\n",
-       "  1: [(1.0, 14, -1.0, False)],\n",
-       "  2: [(1.0, 13, -1.0, False)],\n",
-       "  3: [(1.0, 12, -1.0, False)]},\n",
-       " 14: {0: [(1.0, 10, -1.0, False)],\n",
-       "  1: [(1.0, 15, -1.0, True)],\n",
-       "  2: [(1.0, 14, -1.0, False)],\n",
-       "  3: [(1.0, 13, -1.0, False)]},\n",
-       " 15: {0: [(1.0, 15, 0.0, True)],\n",
-       "  1: [(1.0, 15, 0.0, True)],\n",
-       "  2: [(1.0, 15, 0.0, True)],\n",
-       "  3: [(1.0, 15, 0.0, True)]}}"
+       "[(1.0, 0, 0.0, True)]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.P"
+    "env.P[0][3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:19:37.922016Z",
-     "start_time": "2019-03-19T00:19:27.524388Z"
+     "end_time": "2019-03-19T00:21:33.707892Z",
+     "start_time": "2019-03-19T00:21:33.692932Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.         -1.         -1.25       -1.375     ]\n",
-      " [-1.1875     -1.546875   -1.69921875 -1.91699219]\n",
-      " [-1.55859375 -1.77636719 -1.86889648 -2.12878418]\n",
-      " [-1.95257568 -2.16825867 -2.25109482  0.        ]]\n",
-      "\n",
-      "[[ 0.         -2.94921875 -4.06835938 -4.70727539]\n",
-      " [-3.64233398 -5.06365967 -5.92869568 -6.94413376]\n",
-      " [-5.4392662  -6.41138744 -7.04888701 -7.65574378]\n",
-      " [-7.36633891 -8.38393377 -8.23762916  0.        ]]\n",
-      "\n",
-      "[[  0.          -6.9695282  -10.48682404 -12.77535725]\n",
-      " [ -9.02258182 -13.14670795 -16.33533387 -19.73273575]\n",
-      " [-15.11167906 -18.33418939 -20.68961106 -21.97106241]\n",
-      " [-22.03162831 -25.41651758 -24.2416693    0.        ]]\n",
-      "\n",
-      "[[  0.         -15.62029324 -25.29127613 -32.27999867]\n",
-      " [-21.29647321 -32.04328038 -41.7745597  -51.7523248 ]\n",
-      " [-39.34656473 -48.70818283 -55.86347962 -58.66479942]\n",
-      " [-61.06624826 -70.95903783 -66.62418346   0.        ]]\n",
-      "\n",
-      "[[   0.          -34.85900568  -59.84248618  -79.39870066]\n",
-      " [ -50.11741811  -76.90807196 -103.86615034 -131.1977374 ]\n",
-      " [-100.33690879 -125.72505738 -145.58352727 -151.78867403]\n",
-      " [-163.67224205 -190.85099557 -177.61283049    0.        ]]\n",
-      "\n",
-      "[[   0.          -78.76139664 -141.30966964 -193.24982155]\n",
-      " [-119.22332912 -184.80205534 -255.58939775 -327.29475892]\n",
-      " [-254.30258241 -320.60984753 -372.98371473 -386.32388338]\n",
-      " [-430.9697446  -503.12576749 -465.47989084    0.        ]]\n",
-      "\n",
-      "[[    0.          -180.97967705  -335.09181114  -468.61198868]\n",
-      " [ -287.4368607   -446.95600109  -627.17096922  -809.99590827]\n",
-      " [ -643.75836952  -813.31581074  -947.05635327  -973.85516387]\n",
-      " [-1122.73559195 -1310.33976409 -1206.51491497     0.        ]]\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    877\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 878\u001b[1;33m                 \u001b[0mident\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    879\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\jupyter_client\\session.py\u001b[0m in \u001b[0;36mrecv\u001b[1;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[0;32m    802\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 803\u001b[1;33m             \u001b[0mmsg_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    804\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\zmq\\sugar\\socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[1;34m(self, flags, copy, track)\u001b[0m\n\u001b[0;32m    466\u001b[0m         \"\"\"\n\u001b[1;32m--> 467\u001b[1;33m         \u001b[0mparts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    468\u001b[0m         \u001b[1;31m# have first part already, only loop while more to receive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\zmq\\backend\\cython\\checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-73-a5be7232c1f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mrandom_policy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolicy_eval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_policy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-72-716e25c3325a>\u001b[0m in \u001b[0;36mpolicy_eval\u001b[1;34m(policy, env, discount_factor, theta)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdelta_value\u001b[0m\u001b[1;33m<\u001b[0m\u001b[0mtheta\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m         \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m    851\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 853\u001b[1;33m             \u001b[0mpassword\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    854\u001b[0m         )\n\u001b[0;32m    855\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    881\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    882\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 883\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    884\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    885\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-76-a5be7232c1f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mrandom_policy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolicy_eval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_policy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-75-00cbff954001>\u001b[0m in \u001b[0;36mpolicy_eval\u001b[1;34m(policy, env, discount_factor, theta)\u001b[0m\n\u001b[0;32m     27\u001b[0m             \u001b[0mcurrent_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mprob\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnext_state\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdone\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mP\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprob\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnext_state\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0maction_index\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
      ]
     }
    ],
