--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -70,6 +70,10 @@
     "        for i in range(len(V)):\n",
     "            current_state = V[i]\n",
     "            \n",
+    "            for policy_index in range(4):\n",
+    "                action = policy_index\n",
+    "                action_prob = policy[i,policy_index]\n",
+    "                \n",
     "            for action_index in range(4):\n",
     "                prob, next_state, reward, done = env.P[i][action_index][0]\n",
     "                V[i] = V[i] + policy[i,action_index] * prob * (reward + discount_factor * V[next_state]) \n",
@@ -108,33 +112,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:21:33.707892Z",
-     "start_time": "2019-03-19T00:21:33.692932Z"
+     "end_time": "2019-03-19T00:24:13.187604Z",
+     "start_time": "2019-03-19T00:24:13.180620Z"
     }
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-76-a5be7232c1f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mrandom_policy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolicy_eval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_policy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-75-00cbff954001>\u001b[0m in \u001b[0;36mpolicy_eval\u001b[1;34m(policy, env, discount_factor, theta)\u001b[0m\n\u001b[0;32m     27\u001b[0m             \u001b[0mcurrent_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mprob\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnext_state\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdone\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mP\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprob\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnext_state\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0maction_index\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]\n",
+      " [0.25 0.25 0.25 0.25]]\n",
+      "0\n",
+      "0.25\n",
+      "1\n",
+      "0.25\n",
+      "2\n",
+      "0.25\n",
+      "3\n",
+      "0.25\n"
      ]
     }
    ],
    "source": [
     "random_policy = np.ones([env.nS, env.nA]) / env.nA\n",
-    "v = policy_eval(random_policy, env)\n",
+    "# v = policy_eval(random_policy, env)\n",
     "\n",
     "print(random_policy)\n",
-    "print(v.reshape((4,4)))"
+    "# print(v.reshape((4,4)))\n",
+    "for a, action_prob in enumerate(random_policy[0]):\n",
+    "    print(a)\n",
+    "    print(action_prob)"
    ]
   },
   {
