Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:35:55.160056Z",
-     "start_time": "2019-03-19T00:35:55.153070Z"
+     "end_time": "2019-03-19T00:37:05.960846Z",
+     "start_time": "2019-03-19T00:37:05.952866Z"
     }
    },
    "outputs": [],
@@ -76,9 +76,10 @@
     "                action_prob = policy[i,policy_index]\n",
     "                \n",
     "                for prob, next_state, reward, done in env.P[i][action]:\n",
-    "                    V[i] = current_state + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
+    "                    current_state = current_state + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
     "                    \n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
+    "            V[i] = current_state\n",
     "            \n",
     "        if delta_value < theta: \n",
     "            break\n",
@@ -100,11 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:35:56.455826Z",
-     "start_time": "2019-03-19T00:35:56.445854Z"
+     "end_time": "2019-03-19T00:37:06.744367Z",
+     "start_time": "2019-03-19T00:37:06.722437Z"
     }
    },
    "outputs": [
@@ -112,10 +113,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.         -4.0125803  -4.65069603 -3.4864739 ]\n",
-      " [-5.99713157 -7.39963785 -7.10373846 -5.0452027 ]\n",
-      " [-7.99120121 -8.48511617 -7.31942619 -4.46898239]\n",
-      " [-7.2896119  -7.23021121 -5.21987349  0.        ]]\n"
+      "[[  0.         -13.99993529 -19.99990698 -21.99989761]\n",
+      " [-13.99993529 -17.9999206  -19.99991379 -19.99991477]\n",
+      " [-19.99990698 -19.99991379 -17.99992725 -13.99994569]\n",
+      " [-21.99989761 -19.99991477 -13.99994569   0.        ]]\n"
      ]
     }
    ],
@@ -127,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:36:21.176241Z",
-     "start_time": "2019-03-19T00:36:21.171225Z"
+     "end_time": "2019-03-19T00:37:11.739607Z",
+     "start_time": "2019-03-19T00:37:11.733637Z"
     }
    },
    "outputs": [
@@ -154,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:36:42.875070Z",
-     "start_time": "2019-03-19T00:36:42.870082Z"
+     "end_time": "2019-03-19T00:37:13.704856Z",
+     "start_time": "2019-03-19T00:37:13.699883Z"
     }
    },
    "outputs": [
@@ -166,9 +167,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         3.48902676 4.30043157 6.31010032 2.33444937 2.43255148\n",
-      " 2.81541897 3.96416185 2.50275265 2.3570685  2.45920917 3.13270423\n",
-      " 3.01799332 2.76617092 2.68205734 0.        ]\n"
+      "[0.         1.00000462 1.00000465 1.00000465 1.00000462 1.00000441\n",
+      " 1.00000431 1.00000426 1.00000465 1.00000431 1.00000404 1.00000388\n",
+      " 1.00000465 1.00000426 1.00000388 0.        ]\n"
      ]
     }
    ],
@@ -178,9 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-19T00:37:15.802620Z",
+     "start_time": "2019-03-19T00:37:15.796620Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# test \n",
     "print(\n",
