Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:37:05.960846Z",
-     "start_time": "2019-03-19T00:37:05.952866Z"
+     "end_time": "2019-03-19T00:39:00.952654Z",
+     "start_time": "2019-03-19T00:39:00.945701Z"
     }
    },
    "outputs": [],
    "source": [
-    "def policy_eval(policy, env, discount_factor=1.0, theta=0.00001):\n",
+    "def policy_eval(policy, env, discount_factor=1.0, theta=0.0000001):\n",
     "    \"\"\"\n",
     "    Evaluate a policy given an environment and a full description of the environment's dynamics.\n",
     "    \n",
@@ -80,7 +80,7 @@
     "                    V[i] = V[i] + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
     "                    \n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
-    "            V[i] = current_state\n",
+    "            #V[i] = current_state\n",
     "            \n",
     "        if delta_value < theta: \n",
     "            break\n",
@@ -102,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:37:06.744367Z",
-     "start_time": "2019-03-19T00:37:06.722437Z"
+     "end_time": "2019-03-19T00:38:01.762619Z",
+     "start_time": "2019-03-19T00:38:01.752663Z"
     }
    },
    "outputs": [
@@ -114,10 +114,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  0.         -13.99993529 -19.99990698 -21.99989761]\n",
-      " [-13.99993529 -17.9999206  -19.99991379 -19.99991477]\n",
-      " [-19.99990698 -19.99991379 -17.99992725 -13.99994569]\n",
-      " [-21.99989761 -19.99991477 -13.99994569   0.        ]]\n"
+      "[[ 0.         -4.0125803  -4.65069603 -3.4864739 ]\n",
+      " [-5.99713157 -7.39963785 -7.10373846 -5.0452027 ]\n",
+      " [-7.99120121 -8.48511617 -7.31942619 -4.46898239]\n",
+      " [-7.2896119  -7.23021121 -5.21987349  0.        ]]\n"
      ]
     }
    ],
