Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -69,9 +69,7 @@
     "        # for every state value\n",
     "        for i in range(len(V)):\n",
     "            \n",
-    "            current_state = V[i]\n",
-    "            V[i] = 0\n",
-    "            \n",
+    "            current_state = 0\n",
     "            for policy_index in range(4):\n",
     "                action = policy_index\n",
     "                action_prob = policy[i,policy_index]\n",
@@ -80,7 +78,7 @@
     "                    V[i] = V[i] + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
     "                    \n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
-    "            #V[i] = current_state\n",
+    "            V[i] = current_state\n",
     "            \n",
     "        if delta_value < theta: \n",
     "            break\n",
@@ -102,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:38:01.762619Z",
-     "start_time": "2019-03-19T00:38:01.752663Z"
+     "end_time": "2019-03-19T00:39:08.092486Z",
+     "start_time": "2019-03-19T00:39:08.079517Z"
     }
    },
    "outputs": [
@@ -114,10 +112,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.         -4.0125803  -4.65069603 -3.4864739 ]\n",
-      " [-5.99713157 -7.39963785 -7.10373846 -5.0452027 ]\n",
-      " [-7.99120121 -8.48511617 -7.31942619 -4.46898239]\n",
-      " [-7.2896119  -7.23021121 -5.21987349  0.        ]]\n"
+      "[[ 0.         -4.01259081 -4.65070572 -3.48647892]\n",
+      " [-5.99715026 -7.39965764 -7.10375324 -5.04520998]\n",
+      " [-7.99122337 -8.48513641 -7.3194397  -4.46898804]\n",
+      " [-7.28962827 -7.23022505 -5.21988117  0.        ]]\n"
      ]
     }
    ],
@@ -129,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:37:11.739607Z",
-     "start_time": "2019-03-19T00:37:11.733637Z"
+     "end_time": "2019-03-19T00:39:09.940298Z",
+     "start_time": "2019-03-19T00:39:09.934307Z"
     }
    },
    "outputs": [
@@ -156,11 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:37:13.704856Z",
-     "start_time": "2019-03-19T00:37:13.699883Z"
+     "end_time": "2019-03-19T00:39:11.846367Z",
+     "start_time": "2019-03-19T00:39:11.842378Z"
     }
    },
    "outputs": [
@@ -168,9 +166,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         1.00000462 1.00000465 1.00000465 1.00000462 1.00000441\n",
-      " 1.00000431 1.00000426 1.00000465 1.00000431 1.00000404 1.00000388\n",
-      " 1.00000465 1.00000426 1.00000388 0.        ]\n"
+      "[0.         3.48901762 4.30042261 6.31009124 2.3344421  2.43254498\n",
+      " 2.81541311 3.96415613 2.50274571 2.35706287 2.45920463 3.13270027\n",
+      " 3.01798655 2.76616563 2.6820534  0.        ]\n"
      ]
     }
    ],
