--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:39:00.952654Z",
-     "start_time": "2019-03-19T00:39:00.945701Z"
+     "end_time": "2019-03-19T00:40:39.672524Z",
+     "start_time": "2019-03-19T00:40:39.664539Z"
     }
    },
    "outputs": [],
@@ -79,7 +79,7 @@
     "                # this is not the optimal value\n",
     "                for prob, next_state, reward, done in env.P[i][action]:\n",
     "                    current_state = current_state + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
-    "                    \n",
+    "            # stopping critiria\n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
     "            V[i] = current_state\n",
     "            \n",
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:39:08.092486Z",
-     "start_time": "2019-03-19T00:39:08.079517Z"
+     "end_time": "2019-03-19T00:40:40.377358Z",
+     "start_time": "2019-03-19T00:40:40.341453Z"
     }
    },
    "outputs": [
@@ -115,10 +115,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.         -4.01259081 -4.65070572 -3.48647892]\n",
-      " [-5.99715026 -7.39965764 -7.10375324 -5.04520998]\n",
-      " [-7.99122337 -8.48513641 -7.3194397  -4.46898804]\n",
-      " [-7.28962827 -7.23022505 -5.21988117  0.        ]]\n"
+      "[[  0.         -13.99999932 -19.99999902 -21.99999892]\n",
+      " [-13.99999932 -17.99999916 -19.99999909 -19.9999991 ]\n",
+      " [-19.99999902 -19.99999909 -17.99999923 -13.99999943]\n",
+      " [-21.99999892 -19.9999991  -13.99999943   0.        ]]\n"
      ]
     }
    ],
@@ -130,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:39:09.940298Z",
-     "start_time": "2019-03-19T00:39:09.934307Z"
+     "end_time": "2019-03-19T00:40:42.430106Z",
+     "start_time": "2019-03-19T00:40:42.426110Z"
     }
    },
    "outputs": [
@@ -157,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:39:11.846367Z",
-     "start_time": "2019-03-19T00:39:11.842378Z"
+     "end_time": "2019-03-19T00:40:44.220435Z",
+     "start_time": "2019-03-19T00:40:44.216409Z"
     }
    },
    "outputs": [
@@ -169,9 +169,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         3.48901762 4.30042261 6.31009124 2.3344421  2.43254498\n",
-      " 2.81541311 3.96415613 2.50274571 2.35706287 2.45920463 3.13270027\n",
-      " 3.01798655 2.76616563 2.6820534  0.        ]\n"
+      "[0.         1.00000005 1.00000005 1.00000005 1.00000005 1.00000005\n",
+      " 1.00000005 1.00000005 1.00000005 1.00000005 1.00000004 1.00000004\n",
+      " 1.00000005 1.00000005 1.00000004 0.        ]\n"
      ]
     }
    ],
