Super important commit

--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:40:39.672524Z",
-     "start_time": "2019-03-19T00:40:39.664539Z"
+     "end_time": "2019-03-19T00:44:32.162350Z",
+     "start_time": "2019-03-19T00:44:32.154371Z"
     }
    },
    "outputs": [],
@@ -70,7 +70,8 @@
     "        for i in range(len(V)):\n",
     "            \n",
     "            # temp variable reset to zero\n",
-    "            current_state = 0\n",
+    "            current_state = V[i]\n",
+    "            V[i] = 0\n",
     "            # for every action value - here 4\n",
     "            for policy_index in range(4):\n",
     "                # choose the action and prob value\n",
@@ -78,10 +79,10 @@
     "                action_prob = policy[i,policy_index]\n",
     "                # this is not the optimal value\n",
     "                for prob, next_state, reward, done in env.P[i][action]:\n",
-    "                    current_state = current_state + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
+    "                    V[i] = V[i] + action_prob * prob * (reward + discount_factor * V[next_state]) \n",
     "            # stopping critiria\n",
     "            delta_value = max(delta_value,np.abs(current_state-V[i]))\n",
-    "            V[i] = current_state\n",
+    "            #V[i] = current_state\n",
     "            \n",
     "        if delta_value < theta: \n",
     "            break\n",
@@ -103,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:40:40.377358Z",
-     "start_time": "2019-03-19T00:40:40.341453Z"
+     "end_time": "2019-03-19T00:44:33.153698Z",
+     "start_time": "2019-03-19T00:44:33.142741Z"
     }
    },
    "outputs": [
@@ -115,10 +116,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  0.         -13.99999932 -19.99999902 -21.99999892]\n",
-      " [-13.99999932 -17.99999916 -19.99999909 -19.9999991 ]\n",
-      " [-19.99999902 -19.99999909 -17.99999923 -13.99999943]\n",
-      " [-21.99999892 -19.9999991  -13.99999943   0.        ]]\n"
+      "[[ 0.         -4.01259081 -4.65070572 -3.48647892]\n",
+      " [-5.99715026 -7.39965764 -7.10375324 -5.04520998]\n",
+      " [-7.99122337 -8.48513641 -7.3194397  -4.46898804]\n",
+      " [-7.28962827 -7.23022505 -5.21988117  0.        ]]\n"
      ]
     }
    ],
@@ -130,11 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:40:42.430106Z",
-     "start_time": "2019-03-19T00:40:42.426110Z"
+     "end_time": "2019-03-19T00:43:38.067200Z",
+     "start_time": "2019-03-19T00:43:38.061216Z"
     }
    },
    "outputs": [
@@ -157,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:40:44.220435Z",
-     "start_time": "2019-03-19T00:40:44.216409Z"
+     "end_time": "2019-03-19T00:43:38.489876Z",
+     "start_time": "2019-03-19T00:43:38.484892Z"
     }
    },
    "outputs": [
