--- a/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Evaluation.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-19T00:32:14.526633Z",
-     "start_time": "2019-03-19T00:32:14.522611Z"
+     "end_time": "2019-03-19T17:46:50.934098Z",
+     "start_time": "2019-03-19T17:46:50.644405Z"
     }
    },
    "outputs": [],
@@ -14,6 +14,7 @@
     "import numpy as np\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
+    "import pprint\n",
     "from reference.lib.envs.gridworld import GridworldEnv"
    ]
   },
@@ -239,6 +240,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
