Super important commit

--- a/reinforcement learning/dynamic programming/Policy Iteration.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Iteration.ipynb
@@ -94,9 +94,7 @@
      "end_time": "2019-03-19T20:53:11.263665Z",
      "start_time": "2019-03-19T20:53:11.255705Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -123,6 +121,7 @@
     "    \n",
     "    while True:\n",
     "        \n",
+    "        # get the state value from current policy\n",
     "        policy_stable = True\n",
     "        state_value   = policy_eval(policy,env)\n",
     "        \n",
