--- a/reinforcement learning/dynamic programming/Policy Iteration.ipynb
+++ b/reinforcement learning/dynamic programming/Policy Iteration.ipynb
@@ -229,10 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-19T21:12:45.942725Z",
+     "start_time": "2019-03-19T21:12:45.672148Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "! start ."
+   ]
   }
  ],
  "metadata": {
