Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -74,8 +74,9 @@
     "    \n",
     "    # The final value function\n",
     "    V = defaultdict(float)\n",
+    "    player,dealer,game_over = env.rest()\n",
     "    \n",
-    "    # Implement this!\n",
+    "    \n",
     "\n",
     "    return V    "
    ]
@@ -118,10 +119,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T01:11:08.202667Z",
+     "start_time": "2019-03-21T01:11:08.198670Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "returns_sum   = defaultdict(float)\n",
+    "returns_count = defaultdict(float)\n",
+    "player,dealer,game_over = env.reset()\n",
+    "\n",
+    "print(player)"
+   ]
   },
   {
    "cell_type": "code",
