Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -149,11 +149,22 @@
     "player,dealer,usable_ace = env.reset()\n",
     "\n",
     "if player in returns_count:\n",
-    "    returns_count[player] = \n",
-    "\n",
+    "    returns_count[player] = returns_count[player] + 1\n",
+    "else:\n",
+    "    returns_count[player] = 1\n",
+    "    \n",
     "action_to_take = sample_policy((player,dealer,game_over))\n",
-    "observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "player,dealer,usable_ace,reward,game_over,_ = env.step(action_to_take)\n",
     "\n",
+    "while not game_over: \n",
+    "    action_to_take = sample_policy((player,dealer,game_over))\n",
+    "    player,dealer,usable_ace,reward,game_over,_ = env.step(action_to_take)\n",
+    "\n",
+    "if player in returns_count:\n",
+    "    returns_count[player] = returns_count[player] + 1\n",
+    "else:\n",
+    "    returns_count[player] = 1\n",
+    "    \n",
     "print(player)\n",
     "print(action_to_take)"
    ]
