Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -167,14 +167,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:21:05.422361Z",
-     "start_time": "2019-03-21T01:21:05.412926Z"
+     "end_time": "2019-03-21T01:22:36.207055Z",
+     "start_time": "2019-03-21T01:22:36.192138Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-84-8f6943b5c8f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreturns_sum\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m     \u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreturns_sum\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mreturns_count\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
+     ]
+    }
+   ],
    "source": [
     "returns_sum   = defaultdict(float)\n",
     "returns_count = defaultdict(float)\n",
@@ -199,9 +211,9 @@
     "        observation,reward,game_over,_ = env.step(action_to_take)\n",
     "\n",
     "    if observation[0] in returns_count:\n",
-    "        returns_count[observation[0]] = returns_count[observation[0]] + reward\n",
+    "        returns_sum[observation[0]] = returns_sum[observation[0]] + reward\n",
     "    else:\n",
-    "        returns_count[observation[0]] = reward\n",
+    "        returns_sum[observation[0]] = reward\n",
     "\n",
     "for x in returns_sum.keys():\n",
     "    V[x] = returns_sum[x]/returns_count[x]"
@@ -209,11 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:21:15.585687Z",
-     "start_time": "2019-03-21T01:21:15.580232Z"
+     "end_time": "2019-03-21T01:23:17.346303Z",
+     "start_time": "2019-03-21T01:23:17.342793Z"
     }
    },
    "outputs": [
@@ -221,34 +233,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n",
-      "24\n",
-      "16\n",
-      "22\n",
-      "15\n",
-      "20\n",
-      "21\n",
-      "25\n",
-      "18\n",
-      "26\n",
-      "----------------\n"
+      "dict_keys([22, 21, 20, 28, 23, 24])\n",
+      "dict_keys([16, 14, 20, 21, 12, 13, 22])\n"
      ]
     }
    ],
    "source": [
-    "for x in returns_count.keys():\n",
-    "    print(x)\n",
-    "print('----------------')\n",
-    "for x in V.keys():\n",
-    "    print(x)"
+    "print(returns_sum.keys())\n",
+    "print(returns_count.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 75,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T01:21:20.373333Z",
+     "start_time": "2019-03-21T01:21:20.369356Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(float, {})"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
   },
   {
    "cell_type": "code",
