Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -79,9 +79,11 @@
     "\n",
     "    # The final value function\n",
     "    V = defaultdict(float)\n",
-    "    player,dealer,game_over = env.reset()\n",
-    "\n",
+    "    \n",
+    "    # start the loop\n",
     "    for _ in range(num_episodes):\n",
+    "        \n",
+    "        # reset the state \n",
     "        observation = env.reset()\n",
     "        current_state_to_estimate =observation[0]\n",
     "\n",
