Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -85,7 +85,14 @@
     "        \n",
     "        # reset the state \n",
     "        observation = env.reset()\n",
-    "        current_state_to_estimate =observation[0]\n",
+    "        action_to_take = sample_policy(observation)\n",
+    "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "        \n",
+    "        if observation in returns_count: returns_count[observation] = returns_count[observation] + 1\n",
+    "        else:                            returns_count[observation] = 1\n",
+    "        \n",
+    "        \n",
+    "        current_state_to_estimate = observation[0]\n",
     "\n",
     "        if current_state_to_estimate in returns_count:\n",
     "            returns_count[current_state_to_estimate] = returns_count[current_state_to_estimate] + 1\n",
