Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -83,8 +83,9 @@
     "    # start the loop\n",
     "    for _ in range(num_episodes):\n",
     "        \n",
-    "        # reset the state \n",
-    "        observation = env.reset()\n",
+    "        list_of_state_in_eps = []\n",
+    "        observation    = env.reset()\n",
+    "        list_of_state_in_eps.append(observation)\n",
     "        action_to_take = sample_policy(observation)\n",
     "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
     "        \n",
