Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -84,11 +84,25 @@
     "    for _ in range(num_episodes):\n",
     "        \n",
     "        list_of_state_in_eps = []\n",
+    "        \n",
     "        observation    = env.reset()\n",
     "        list_of_state_in_eps.append(observation)\n",
     "        action_to_take = sample_policy(observation)\n",
     "        next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "        observation    = next_observation\n",
     "        \n",
+    "        while not game_over: \n",
+    "            action_to_take = sample_policy(observation)\n",
+    "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "\n",
+    "            if observation in returns_count: returns_count[observation] = returns_count[observation] + 1\n",
+    "            else:                            returns_count[observation] = 1\n",
+    "\n",
+    "            if observation in returns_sum  : returns_sum[observation] = returns_sum[observation] + reward\n",
+    "            else:                            returns_sum[observation] = reward\n",
+    "\n",
+    "            observation = next_observation\n",
+    "            \n",
     "        if observation in returns_count: returns_count[observation] = returns_count[observation] + 1\n",
     "        else:                            returns_count[observation] = 1\n",
     "        \n",
