Super important commit

--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 116,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:46:04.526342Z",
-     "start_time": "2019-03-21T01:46:04.515926Z"
+     "end_time": "2019-03-21T01:48:43.339492Z",
+     "start_time": "2019-03-21T01:48:43.325603Z"
     }
    },
    "outputs": [],
@@ -95,7 +95,7 @@
     "            list_of_state_in_eps.append(observation)\n",
     "            action_to_take = sample_policy(observation)\n",
     "            next_observation,reward,game_over,_ = env.step(action_to_take)\n",
-    "            observation = next_observation\n",
+    "            observation    = next_observation\n",
     "            \n",
     "            \n",
     "        print(list_of_state_in_eps)\n",
@@ -130,12 +130,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 117,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:46:04.933831Z",
-     "start_time": "2019-03-21T01:46:04.930848Z"
-    }
+     "end_time": "2019-03-21T01:48:43.810461Z",
+     "start_time": "2019-03-21T01:48:43.806509Z"
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -149,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:46:05.240067Z",
-     "start_time": "2019-03-21T01:46:05.233659Z"
+     "end_time": "2019-03-21T01:48:56.233692Z",
+     "start_time": "2019-03-21T01:48:56.227256Z"
     },
     "scrolled": false
    },
@@ -162,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(17, 10, True), (20, 10, True)]\n"
+      "[(13, 10, False), (15, 10, False), (20, 10, False)]\n"
      ]
     },
     {
@@ -172,14 +175,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
